# ICP_3dPhoto

./: vimrc
Final Report/: .gitignore  FinalReport.tex  FinalReport.txt  egbib.bib
Final Report/template/: README.txt  egpaper_for_review.tex
GPGPU presentation/: Presentation.odp
calibration/: Points2.mat  calibration_data.txt  decompose.m  dlt.m  exercise2.m  fminGoldStandard.m  getpoints.m  normalization.m  runDLT.m  runGoldStandard.m
calibration/__MACOSX/: ._decompose.m  ._dlt.m  ._fminGoldStandard.m  ._fminGoldStandardRadial.m  ._getpoints.m  ._images  ._runDLT.m  ._runGoldStandard.m  ._runGoldStandardRadial.m
calibration/__MACOSX/images/: ._.svn
calibration/__MACOSX/images/.svn/: ._all-wcprops  ._entries  ._format  ._prop-base  ._props  ._text-base  ._tmp
calibration/__MACOSX/images/.svn/tmp/: ._prop-base  ._props  ._text-base
calibration/calib/: calib_data.mat
calibration/images/.svn/: all-wcprops  entries
icp/: fasticp_3dim01.ppt
kinect_icp/: .gitignore  CMakeLists.txt  ScanLargeArrays_Kernels.cl  fuse.cl  mainpage.dox  manifest.xml  rosconfig.cmake  test.ini  test.off
kinect_icp/include/kinect_icp/: icp_core.h  icp_local.h  vrip.h
kinect_icp/src/: icp_core.cpp  icp_local.cpp  point_cloud_collector.cpp  point_cloud_creator.cpp  point_cloud_fusor.cpp  vrip.cpp
marching_cubes/: main.cpp  marchingcubes.cpp  marchingcubes.hpp
project update/: Update.odp
slam/: WhyFilter.odp
